--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
     "@walletconnect/ethereum-provider": "^2.23.0",
     "ethers": "^6.15.0",
     "html5-qrcode": "^2.3.8",
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "next": "15.1.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "babel-plugin-react-compiler": "1.0.0",
+    "desm": "^1.3.1",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "15.1.6",
+    "fastbench": "^1.0.1",
+    "pino-elasticsearch": "^8.1.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "tap": "^21.4.0",
+    "typescript": "^5",
+    "why-is-node-running": "^3.2.2"
   }
 }
